--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
-This is the master branch.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+	<script type="text/javascript" src="assets/javascript/game.js"></script>
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<title>Rim | Basic Trivia</title>
+</head>
+<body>
 
-This is the develop branch.
+<div id="mainSection">
+	<h1>Basic Trivia</h1>
+	<div id="gameSection">
+	</div>
+</div>
+
+	
+</body>
+</html>
