--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div id="mainSection">
 	<h1>Basic Trivia</h1>
 	<div id="gameSection">
+		<button id="start-button" type="button">Start</button>
 	</div>
 </div>
 
